--- a/CSC173 - Initial Project Report - Nawawi Palawan.ipynb
+++ b/CSC173 - Initial Project Report - Nawawi Palawan.ipynb
@@ -227,6 +227,8 @@
     "    plt.show()\n",
     "\n",
     "# Display random images for each facial shape category\n",
+    "# Display random images for each facial shape category\n",
+    "# Display random images for each facial shape category\n",
     "display_random_images(f'{train_dir}/oblong', 'Oblong', 5)\n",
     "display_random_images(f'{train_dir}/heart', 'Heart', 5)\n",
     "display_random_images(f'{train_dir}/round', 'Round', 5)\n",
@@ -338,9 +340,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 117ms/step\n",
+      "Predicted Face Shape: Square\n",
+      "Recommended Haircuts: Gelled to the Side, Full Shave, Mega-Pompadour, Bare-Guard Buzz, Line-Up Buzz, Receded Buzz, Close-Cropped Curls, Modern Flat Top, Undercut, Gentleman's Cut\n"
+     ]
+    }
+   ],
    "source": [
     "# Load and preprocess a new image for prediction\n",
     "img_path = 'dataset\\\\testing_set\\\\Square\\\\30000806490_500.jpg' \n",
